# cronos

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
corelib/: __init__.py  exceptions.py
corelib/allocation/: __init__.py  config.py
corelib/allocation/adapters/: README.md  __init__.py  orm.py  repository.py
corelib/allocation/domain/: __init__.py  model.py
corelib/allocation/entrypoints/: __init__.py  flask_app.py
corelib/allocation/service_layer/: __init__.py  services.py
corelib/syncsys/: __init__.py  sync.py
tests/: __init__.py  conftest.py
tests/e2e/: test_api.py  test_sync.py
tests/integration/: test_repository.py
tests/unit/: __init__.py  test_batches.py  test_semantic_versioning.py  test_services.py  test_sync.py
