[tool.poetry]
name = "cronos"
version = "0.1.0"
description = "Cronos is a machine learning logistic system to optimize stock allocation to a customer’s orders."
authors = ["Heber Trujillo <heber.trj.urt@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.19.0"
black = "^22.3.0"
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line-length = 79
force_grid_wrap = 2